			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04u: *********************************

IMP: (7/18/06, GVG) Switching "External Reader JVM" on by default due to "small nanosim waveform takes forever to load" (bug #1177).

IMP: (7/17/06, GVG) Adding level control to AFG.

BUG: (7/17/06, GVG) Cell Info -> Graphically not working. Calling redisplay inside doIt() (bug #1180)
FIX: Move redisplay call to terminateOK().

IMP: (6/28/06, GVG) Changes in DRCToolTest to run DRC batch mode inclusing saving of XML file containing DRC ErrorLogger.

IMP: (6/27/06, RK) NCC: Rewrote hash code algorithm to make it strictly activity directed. This allows NCC to handle ambiguity more efficiently. (Bugzilla# 1165)

BUG: (6/23/06, GVG) demo.j3d was not loaded from electric.jar
FIX: Using URL and InputStream classes to upload files contained in jar.
 
BUG: (6/23/06, SMR) When doing cross-library copy and copying subcells,
     schematics don't copy with the icons (Bug #1130).
FIX: In CellChangeJobs.copyRecursively(), copy related views independent
     of "delete after copy".

BUG: (6/23/06, SMR) Using shift-right click to zoom out fails when down-in-place (Bug #1164).
FIX: In ClickZoomWireListener.mouseReleased(), transform coordinates when zooming out.

BUG: (6/22/06, GVG) DRC exclusion layer not working (Bug#1166)
FIX: Exclusion area was expecting that both geometries were completely inside the area.
     Changed to only 1.

************************* Version 8.04t: *********************************

IMP: (6/21/06, GVG) Cleaning Generation regression.

IMP: (6/21/06, GVG) BJT dummy layer for PNP transistors and LVS.

BUG: (6/21/06, GVG) No multi-cuts in native active contacts
FIX: Via layer MUST be last one defined in the primitive. This is not good!
Split of NT on native transistors to correct port assignments.

BUG: (6/21/06, GVG) Null exception in Spice netlister (bug #1160)